--- a/public/fontend/emoji/emojionearea.css
+++ b/public/fontend/emoji/emojionearea.css
@@ -107,26 +107,28 @@
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
-.emojionearea .emojionearea-editor {
-  display: block;
-  height: auto;
-  min-height: 8em;
-  max-height: 15em;
-  overflow: auto;
-  padding: 6px 24px 6px 12px;
-  line-height: 1.42857143;
-  font-size: inherit;
-  color: #555555;
-  background-color: transparent;
-  border: 0;
-  cursor: text;
-  margin-right: 1px;
-  -moz-border-radius: 0;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-  box-shadow: none; }
+  .emojionearea .emojionearea-editor {
+    display: block;
+    height: auto;
+    width: 100%;
+    min-height: 5em;
+    max-height: 15em;
+    overflow: auto;
+    padding: 6px 24px 6px 12px;
+    line-height: 1.42857143;
+    font-size: inherit;
+    color: #555555;
+    background-color: transparent;
+    border: 0;
+    cursor: text;
+    margin-right: 1px;
+    -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
   .emojionearea .emojionearea-editor:empty:before {
     content: attr(placeholder);
     display: block;
